@@ -26,4 +26,9 @@
         layer="opengever.base.interfaces.IOpengeverBaseLayer"
         />
 
+    <browser:resourceDirectory
+        name="opengever.mail"
+        directory="resources"
+        />
+
 </configure>
