@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<object name="portal_css">
+
+    <stylesheet id="++resource++opengever.mail/mail.css"
+                cacheable="True"
+                compression="safe"
+                cookable="True"
+                rendering="link"
+                />
+
+</object>
